<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="faq_notification_paragraph_1">You get a notification after you\'ve been exposed to a higher risk of infection. This happens if you\'ve spent at least 15 minutes near someone who has coronavirus. This could be one or more people. But only if they also use the app.\n\nWhether or not you get a notification depends on the strength of the Bluetooth signal and the duration of your encounter. Did someone cycle past you on the street? Then you won\'t get a notification later. Yes, the Bluetooth signal was strong because you were near each other. But only for a short time. So your risk of infection is very low.\n\nWere you near someone on the train or in the office? Then you could get a notification later. The Bluetooth signal was strong and you were near each other for a longer period of time.</string>
    <string name="app_name">CoronaMelder</string>
    <string name="app_language">en</string>
    <string name="onboarding_next">Next</string>
    <string name="onboarding_example">Example</string>
    <string name="onboarding_explanation_1_headline">Help stop the spread of the coronavirus</string>
    <string name="onboarding_explanation_1_description">This app notifies you if you\'ve been near someone who has coronavirus. So you can prevent infecting people around you.</string>
    <string name="onboarding_explanation_2_headline">You get a notification <u>after</u> you\'ve had a higher risk of infection</string>
    <string name="onboarding_explanation_2_description">The app notifies you if you\'ve been near someone for at least 15 minutes who was later found to have coronavirus. But only if that person also uses the app.</string>
    <string name="onboarding_explanation_3_headline">The app uses Bluetooth, <u>no</u> location data</string>
    <string name="onboarding_explanation_3_description">Using Bluetooth, the app sees if you\'ve been near someone. The closer you\'ve been, the stronger the Bluetooth signal. The app doesn\'t know who you are or where you\'ve been.</string>
    <string name="onboarding_example_1_headline">Did someone cycle past you? Then you will <u>not</u> get a notification later</string>
    <string name="onboarding_example_1_description">The Bluetooth signal was strong because you were near each other. But only for a very short time. This means your risk of infection is very low.</string>
    <string name="onboarding_example_2_headline">Did you sit near someone on the train? You <u>might</u> get a notification later</string>
    <string name="onboarding_example_2_description">The Bluetooth signal was strong enough and you were near each other for a longer period of time.</string>
    <string name="onboarding_consent_headline">Turn on notifications about possible coronavirus exposure</string>
    <string name="onboarding_consent_check_1">Bluetooth data is saved on your phone for 14 days. You can always delete it yourself.</string>
    <string name="onboarding_consent_check_2"><![CDATA[Your name will <strong>not</strong> be used or saved.]]></string>
    <string name="onboarding_consent_check_3"><![CDATA[Your GPS or location data will <strong>not</strong> be used or saved.]]></string>
    <string name="onboarding_consent_request">Turn on</string>
    <string name="onboarding_consent_explain">How does the app work?</string>
    <string name="onboarding_consent_skip">Skip</string>
    <string name="onboarding_consent_skip_dialog_title">Are you sure you don\'t want to turn on these notifications?</string>
    <string name="onboarding_consent_skip_dialog_message">Without permission, the app won\'t be able to send you notifications after you\'ve been exposed to a higher risk of infection.</string>
    <string name="onboarding_consent_skip_dialog_skip">Skip</string>
    <string name="onboarding_consent_skip_dialog_enable">Turn on</string>
    <string name="onboarding_how_it_works_toolbar_title">How does the app work?</string>
    <string name="onboarding_how_it_works_request_consent">Turn on app</string>
    <string name="onboarding_how_it_works_detail_toolbar_title">Frequently asked question</string>
    <string name="onboarding_share_headline">Share the app with others</string>
    <string name="onboarding_share_description">The more people use CoronaMelder, the better it works. So, share the app with as many other people as you can. Like friends and family.</string>
    <string name="onboarding_share_continue">Continue</string>
    <string name="onboarding_share_share">Share app</string>
    <string name="status_no_exposure_detected_headline">The app is active</string>
    <string name="status_no_exposure_detected_description">Encounters will be tracked, even when you close the app</string>
    <string name="status_exposure_detected_headline">You\'ve been near someone who has coronavirus</string>
    <string name="status_exposure_detected_description">You had a higher risk of infection on %1$s (%2$s)</string>
    <string name="status_disabled_headline">The app is not active</string>
    <string name="status_en_api_disabled_description">%1$s only works if the necessary settings are turned on.</string>
    <string name="status_en_api_disabled_enable">Turn on app</string>
    <string name="notification_channel_name">Contact notifications</string>
    <string name="notification_channel_description">Notifications about possible coronavirus exposure</string>
    <string name="notification_title">Possible coronavirus exposure</string>
    <string name="notification_message">You were near someone who has coronavirus %1$s. Read more in the app.</string>
    <string name="notification_message_reminder_prefix">Reminder: %1$s</string>
    <string name="notification_message_reminder_dismiss">Stop reminders</string>
    <string name="app_inactive_title">CoronaMelder is not active at the moment</string>
    <string name="app_inactive_message">Check your settings.</string>
    <string name="update_channel_name">App updates</string>
    <string name="update_channel_description">Notifications when the app version is outdated</string>
    <string name="update_notification_title">The app needs to be updated</string>
    <string name="update_notification_message">Update the app to make sure it works properly.</string>
    <string name="sync_issue_channel_name">Errors</string>
    <string name="sync_issue_channel_description">Notifications if the app isn\'t working correctly</string>
    <string name="sync_issue_notification_title">Technical problem</string>
    <string name="sync_issue_notification_message">The app wasn\'t able to check for 24 hours if the people you encountered later turned out to have corona.</string>
    <string name="post_notification_toolbar_title">Risk of infection</string>
    <string name="post_notification_message">Have your citizen service number (BSN) ready. You\'ll find it on your passport, identity card or nationality certificate.</string>
    <string name="post_notification_button">Request coronavirus test</string>
    <string name="generic_notification_toolbar_title">Getting a notification</string>
    <string name="generic_notification_header_1">How do I recognize a notification?</string>
    <string name="generic_notification_paragraph_2">The app sends you a notification if you\'ve spent at least 15 minutes near someone who has coronavirus. This could be one or more people.</string>
    <string name="generic_notification_paragraph_4">Find the CoronaMelder message in your notifications. Where you also find messages from other apps. You can recognise the message by the CoronaMelder icon.\n\nDid you receive a notification? Open CoronaMelder. You\'ll find instructions on what to do in the app.</string>
    <string name="generic_notification_alt_text_6">Red screen with alarm bell that shows you need to take action immediately</string>
    <string name="generic_notification_caption_7">Example: This is how the app looks if you get a notification</string>
    <string name="generic_notification_header_8">What can you do after you\'ve been near someone who has coronavirus?</string>
    <string name="generic_notification_paragraph_9">Follow the advice from the app. This advice is different based on your situation. It depends on whether you have symptoms related to coronavirus. And on which day you were possibly exposed.</string>
    <string name="generic_notification_paragraph_10">Were you called by the GGD? Follow the advice given by the GGD, not the advice given by the app.</string>
    <string name="generic_notification_header_11">Other notifications</string>
    <string name="generic_notification_paragraph_12">The app can also send you a notification if there\'s a technical problem. If your Bluetooth is turned off, for example. Or if your phone hasn\'t been connected to the internet for longer than a day. The app helps you resolve these problems.</string>
    <string name="generic_notification_paragraph_13">Did you get such a notification while the app is working correctly? This means the problem was fixed in the meantime.</string>
    <string name="treat_perspective_header_1">Possible coronavirus symptoms</string>
    <string name="treat_perspective_list_2"><![CDATA[<ul><li>cold symptoms like nasal cold, runny nose, sneezing, sore throat</li><li>cough</li><li>shortness of breath</li><li>elevated temperature or fever</li><li>sudden loss of smell or taste (without nasal congestion)</li></ul>]]></string>
    <string name="request_test_toolbar_title">Request coronavirus test</string>
    <string name="request_test_header_1">Do you have symptoms related to the coronavirus? Get tested</string>
    <string name="request_test_paragraph_2">Do you have (mild) symptoms related to the coronavirus? Get a free test. It doesn\'t take long to get tested and waiting times are usually short. \n\nYou get the results within 48 hours. In the meantime, stay home.</string>
    <string name="request_test_paragraph_4">Do you have serious symptoms like a high fever or shortness of breath? Or are you part of a high-risk group and have a fever? Call your doctor first.</string>
    <string name="request_test_button_call">Call %1$s</string>
    <string name="request_test_button_website">Go to coronatest.nl</string>
    <string name="status_reset_exposure">Delete notification</string>
    <string name="status_dialog_remove_exposure_title">Potential infection on %1$s</string>
    <string name="status_dialog_remove_exposure_message">Are you sure you want to delete this notificaton? You won\'t be able to find the date in the app after this. So remember it well.</string>
    <string name="lab_test_token_error">The app couldn\'t retrieve the GGD key. Please check your internet connection.</string>
    <string name="lab_test_token_retry">Try again</string>
    <string name="error_upload_not_available">You can only send a notification if the necessary settings are turned on.</string>
    <string name="cd_error_box">Warning</string>
    <string name="status_error_battery_optimisation">Your phone has an option called \'battery optimisation\'. This might make the app not work correctly. So it\'s important you turn this option off for CoronaMelder.</string>
    <string name="status_error_action_disable_battery_optimisation">Resolve issue</string>
    <string name="enable_internet_title">Connect to the internet</string>
    <string name="enable_internet_description">The app needs an internet connection to check if people you\'ve encountered later turned out to have coronavirus.\n\nConnect to Wi-Fi or turn off \'Only check codes with Wi-Fi\' in the app settings.</string>
    <string name="enable_internet_open_settings_button">Open Settings</string>
    <string name="enable_internet_footer">Is the app still not completely active? Then it\'s probably a technical issue. At this time, there\'s nothing you can do.</string>
    <string name="coronatest_share_keys">Share codes</string>
</resources>