<?xml version="1.0" encoding="utf-8"?><!--
  ~  Copyright (c) 2020 De Staat der Nederlanden, Ministerie van Volksgezondheid, Welzijn en Sport.
  ~   Licensed under the EUROPEAN UNION PUBLIC LICENCE v. 1.2
  ~
  ~   SPDX-License-Identifier: EUPL-1.2
  ~
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewState"
            type="nl.rijksoverheid.en.items.ErrorBoxItem.ViewState" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="16dp"
        android:background="@drawable/message_box_background"
        android:backgroundTint="@color/info_surface"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp">

        <ImageView
            android:id="@+id/error_box_image"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/cd_error_box"
            android:src="@drawable/ic_error"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/error_box_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:minHeight="32dp"
            android:gravity="center_vertical"
            app:text="@{viewState.title}"
            tools:text="@string/status_disabled_headline"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/error_box_image"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/header_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="error_box_image, error_box_title"
            app:barrierDirection="bottom" />

        <TextView
            android:id="@+id/error_box_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{viewState.text}"
            android:textAppearance="?attr/textAppearanceBody1"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/error_box_image"
            app:layout_constraintTop_toBottomOf="@+id/header_barrier"
            tools:text="@string/error_upload_not_available" />

        <Button
            style="@style/Widget.MaterialComponents.Button.TextButton.Snackbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewState.action.invoke()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/error_box_text"
            app:showIfLabelSet="@{viewState.actionLabel}"
            tools:text="@string/status_en_api_disabled_enable" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>