<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright (c) 2020 De Staat der Nederlanden, Ministerie van Volksgezondheid, Welzijn en Sport.
  ~   Licensed under the EUROPEAN UNION PUBLIC LICENCE v. 1.2
  ~
  ~   SPDX-License-Identifier: EUPL-1.2
  ~
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="4dp"
            android:layout_height="0dp"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="12dp"
            android:background="@color/gray_lighter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/circle_counter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:minWidth="28dp"
            android:minHeight="28dp"
            android:text="1"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/share_keys_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/coronatest_share_keys"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/circle_counter"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/request_test_button_website" />

        <TextView
            android:id="@+id/error_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:visibility="gone"
            android:text="@string/lab_test_token_error"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/circle_counter"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/retry_button"
            style="@style/Widget.MaterialComponents.Button.TextButton.Snackbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@string/lab_test_token_retry"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/error_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/circle_counter"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>