<?xml version="1.0" encoding="utf-8"?><!--
  ~  Copyright (c) 2020 De Staat der Nederlanden, Ministerie van Volksgezondheid, Welzijn en Sport.
  ~   Licensed under the EUROPEAN UNION PUBLIC LICENCE v. 1.2
  ~
  ~   SPDX-License-Identifier: EUPL-1.2
  ~
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewState"
            type="nl.rijksoverheid.en.status.StatusBatteryOptimizationEnabledItem.ViewState" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="16dp"
        android:background="@drawable/message_box_background"
        android:backgroundTint="@color/info_surface"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp">

        <ImageView
            android:id="@+id/error_box_image"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/cd_error_box"
            android:src="@drawable/ic_error"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/error_box_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/status_error_battery_optimisation"
            android:textAppearance="?attr/textAppearanceBody1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/error_box_image"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/error_box_button"
            style="@style/Widget.MaterialComponents.Button.TextButton.Snackbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewState.action.invoke()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/error_box_text"
            android:text="@string/status_error_action_disable_battery_optimisation"
            tools:text="Probleem oplossen" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
